add py scripts to convert xlsx job info to json and fix html dependencies

--- a/public/pages/fftas.html
+++ b/public/pages/fftas.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>FFTA Simple</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/ffta.css"/>
-    <script src="javascripts/d3.v3.min.js" charset="utf-8"></script>
-	<script src="javascripts/sankey.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/ffta.css"/>
+    <script src="../javascripts/d3.v3.min.js" charset="utf-8"></script>
+	<script src="../javascripts/sankey.js" charset="utf-8"></script>
 </head>
 
 <body>
