--- a/public/pages/ffta.html
+++ b/public/pages/ffta.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Basic Axes</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
-    <script src="javascripts/d3.v3.min.js" charset="utf-8"></script>
-	<script src="javascripts/sankey.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/ffta.css"/>
+    <script src="../javascripts/d3.v3.min.js" charset="utf-8"></script>
+	<script src="../javascripts/sankey.js" charset="utf-8"></script>
 </head>
 <style>
 
