--- a/public/pages/fftaJobListOnlyNodes.html
+++ b/public/pages/fftaJobListOnlyNodes.html
@@ -60,7 +60,7 @@ d3.json("ffta.json", function(tables) {
   filtered_data = mydata[race];
   var jobs = d3.select("#chart-container")
                 .selectAll(".job")
-                .data(filtered_data.nodes, function(d){return d.name + race});
+                .data(filtered_data.nodes, function(d){return d.name + race;});
 
   var jobsEnter = jobs.enter()
                 .append("div")
@@ -85,34 +85,7 @@ d3.json("ffta.json", function(tables) {
   link.append("title")
       .text(function(d) { return d.source.name + " → " + d.target.name + "\n" + format(d.value); });
 
-  var node = svg.append("g").selectAll(".node")
-      .data(filtered_data.nodes)
-    .enter().append("g")
-      .attr("class", "node")
-      .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
-    .call(d3.behavior.drag()
-      .origin(function(d) { return d; })
-      .on("dragstart", function() { this.parentNode.appendChild(this); })
-      .on("drag", dragmove));
 
-  node.append("rect")
-      .attr("height", function(d) { return d.dy; })
-      .attr("width", sankey.nodeWidth())
-      .style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
-      .style("stroke", function(d) { return d3.rgb(d.color).darker(2); })
-    .append("title")
-      .text(function(d) { return d.name + "\n" + format(d.value); });
-
-  node.append("text")
-      .attr("x", -6)
-      .attr("y", function(d) { return d.dy / 2; })
-      .attr("dy", ".35em")
-      .attr("text-anchor", "end")
-      .attr("transform", null)
-      .text(function(d) { return d.name; })
-    .filter(function(d) { return d.x < width / 2; })
-      .attr("x", 6 + sankey.nodeWidth())
-      .attr("text-anchor", "start");
 
   function dragmove(d) {
     d3.select(this).attr("transform", "translate(" + d.x + "," + (d.y = Math.max(0, Math.min(height - d.dy, d3.event.y))) + ")");
@@ -124,7 +97,7 @@ d3.json("ffta.json", function(tables) {
 function showJobTree(race){
   var race = d3.select(this)
                 .attr("race");
-  console.log(race);
+  // console.log(race);
 
   filtered_data = mydata[race];
 
@@ -132,7 +105,7 @@ function showJobTree(race){
 
   var jobs = d3.select("#chart-container")
                 .selectAll(".job")
-                .data(filtered_data.nodes, function(d){return d.name + race});
+                .data(filtered_data.nodes, function(d){return d.name + race;});
 
   var jobsRemoved = jobs.exit()
                         .remove();
@@ -144,13 +117,16 @@ function showJobTree(race){
             .attr("class", "name")
             .text(function (d){return d.name;});
 
+
   sankey
       .nodes(filtered_data.nodes)
       .links(filtered_data.links)
       .layout(32);
 
+
   var link = svg.selectAll(".link")
       .data(filtered_data.links);
+
 
 // update links
   link.exit()
@@ -162,39 +138,9 @@ function showJobTree(race){
     .style("stroke-width", function(d) { return Math.max(1, d.dy); })
     .sort(function(a, b) { return b.dy - a.dy; });
 
-// update nodes
-  var node = svg.select("g").selectAll(".node")
-      .data(filtered_data.nodes);
+  link.append("title")
+      .text(function(d) { return d.source.name + " → " + d.target.name + "\n" + format(d.value); });
 
-  node.exit()
-      .remove();
-
-  node.enter().append("g")
-      .attr("class", "node")
-      .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
-    .call(d3.behavior.drag()
-      .origin(function(d) { return d; })
-      .on("dragstart", function() { this.parentNode.appendChild(this); })
-      .on("drag", dragmove));
-
-  node.append("rect")
-      .attr("height", function(d) { return d.dy; })
-      .attr("width", sankey.nodeWidth())
-      .style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
-      .style("stroke", function(d) { return d3.rgb(d.color).darker(2); })
-    .append("title")
-      .text(function(d) { return d.name + "\n" + format(d.value); });
-
-  node.append("text")
-      .attr("x", -6)
-      .attr("y", function(d) { return d.dy / 2; })
-      .attr("dy", ".35em")
-      .attr("text-anchor", "end")
-      .attr("transform", null)
-      .text(function(d) { return d.name; })
-    .filter(function(d) { return d.x < width / 2; })
-      .attr("x", 6 + sankey.nodeWidth())
-      .attr("text-anchor", "start");
 
   function dragmove(d) {
     d3.select(this).attr("transform", "translate(" + d.x + "," + (d.y = Math.max(0, Math.min(height - d.dy, d3.event.y))) + ")");
