--- a/public/pages/fftaText.html
+++ b/public/pages/fftaText.html
@@ -13,7 +13,7 @@
 
 <div id="container">
 	<div id="button-container">
-		<div class="button" race="Human">Human</div>
+		<div class="selected_button" race="Human">Human</div>
 		<div class="button" race="Viera">Viera</div>
 	</div>
 	<div id="chart-container">
@@ -27,8 +27,8 @@
 <script type="text/javascript">
 
 var mydata;
+var selected_race;
 var filtered_data;
-
 
 var margin = {top: 1, right: 1, bottom: 6, left: 1},
     width = 480 - margin.left - margin.right,
@@ -52,22 +52,59 @@ var sankey = d3.sankey()
 var path = sankey.link();
 
 
-
-d3.json("ffta.json", function(tables) {
+d3.json("fftaCombined.json", function(tables) {
 
   mydata = tables;
-  var race = "Human";
-  filtered_data = mydata[race];
-  var jobs = d3.select("#chart-container")
-                .selectAll(".job")
-                .data(filtered_data.nodes, function(d){return d.name + race});
+  selected_race = "Human";
+  redraw();
+});
 
-  var jobsEnter = jobs.enter()
-                .append("div")
-                .attr("class", "job");
-  jobsEnter.append("div")
-            .attr("class", "name")
-            .text(function (d){return d.name;});
+function showJobTree(){
+  previous_selected_button = d3.select(".selected_button")
+  previous_selected_button.attr("class", "button")
+
+  selected_button = d3.select(this);
+  selected_race = selected_button.attr("race");
+  selected_button.attr("class", "selected_button");
+  console.log(selected_race);
+  redraw();
+}
+
+
+d3.selectAll(".button")
+  .on("click", showJobTree);
+
+d3.selectAll(".selected_button")
+  .on("click", showJobTree);
+
+function redraw(){
+  selected_button = d3.select(".selected_button");
+  selected_race = selected_button.attr("race");
+  console.log('this is redraw(), selected_race is: ' + selected_race);
+
+  filtered_nodes = new Array;
+  for(var i=0;i<mydata.nodes.length;i++){
+    if(mydata.nodes[i].race===selected_race){
+      filtered_nodes.push(mydata.nodes[i]);
+    }
+  }
+  // console.log(filtered_nodes);
+
+  filtered_links = new Array;
+
+  filtered_nodes_id_list = filtered_nodes.map(function(d){return d.id;});
+  // console.log(filtered_nodes_id_list);
+
+  for(var i=0;i<mydata.links.length;i++){
+    if((filtered_nodes_id_list.indexOf(mydata.links[i].source)>=0) || (filtered_nodes_id_list.indexOf(mydata.links[i].target)>=0)){
+      filtered_links.push(mydata.links[i]);
+    }
+  }
+
+  console.log(filtered_nodes);
+  console.log(filtered_links);
+
+  filtered_data = {"nodes": filtered_nodes, "links": filtered_links};
 
   sankey
       .nodes(filtered_data.nodes)
@@ -119,94 +156,7 @@ d3.json("ffta.json", function(tables) {
     sankey.relayout();
     link.attr("d", path);
   }
-});
-
-function showJobTree(race){
-  var race = d3.select(this)
-                .attr("race");
-  console.log(race);
-
-  filtered_data = mydata[race];
-
-  console.log(filtered_data);
-
-  var jobs = d3.select("#chart-container")
-                .selectAll(".job")
-                .data(filtered_data.nodes, function(d){return d.name + race});
-
-  var jobsRemoved = jobs.exit()
-                        .remove();
-
-  var jobsEnter = jobs.enter()
-                .append("div")
-                .attr("class", "job");
-  jobsEnter.append("div")
-            .attr("class", "name")
-            .text(function (d){return d.name;});
-
-  sankey
-      .nodes(filtered_data.nodes)
-      .links(filtered_data.links)
-      .layout(32);
-
-  var link = svg.selectAll(".link")
-      .data(filtered_data.links);
-
-// update links
-  link.exit()
-      .remove();
-
-  link.enter().append("path")
-    .attr("class", "link")
-    .attr("d", path)
-    .style("stroke-width", function(d) { return Math.max(1, d.dy); })
-    .sort(function(a, b) { return b.dy - a.dy; });
-
-// update nodes
-  var node = svg.select("g").selectAll(".node")
-      .data(filtered_data.nodes);
-
-  node.exit()
-      .remove();
-
-  node.enter().append("g")
-      .attr("class", "node")
-      .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
-    .call(d3.behavior.drag()
-      .origin(function(d) { return d; })
-      .on("dragstart", function() { this.parentNode.appendChild(this); })
-      .on("drag", dragmove));
-
-  node.append("rect")
-      .attr("height", function(d) { return d.dy; })
-      .attr("width", sankey.nodeWidth())
-      .style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
-      .style("stroke", function(d) { return d3.rgb(d.color).darker(2); })
-    .append("title")
-      .text(function(d) { return d.name + "\n" + format(d.value); });
-
-  node.append("text")
-      .attr("x", -6)
-      .attr("y", function(d) { return d.dy / 2; })
-      .attr("dy", ".35em")
-      .attr("text-anchor", "end")
-      .attr("transform", null)
-      .text(function(d) { return d.name; })
-    .filter(function(d) { return d.x < width / 2; })
-      .attr("x", 6 + sankey.nodeWidth())
-      .attr("text-anchor", "start");
-
-  function dragmove(d) {
-    d3.select(this).attr("transform", "translate(" + d.x + "," + (d.y = Math.max(0, Math.min(height - d.dy, d3.event.y))) + ")");
-    sankey.relayout();
-    link.attr("d", path);
-  }
 }
-
-
-d3.selectAll(".button")
-  .on("click", showJobTree);
-
 
 
 </script>
